# algorithms-and-patterns

./: .gitignore  README.md
Chapter1/Factorial/: CMakelists.txt  algorithm.h  main.cpp
Chapter1/FractalStar/: README.md  TrabajoPráctico.md  fractal.cpp
Chapter1/HilbertFractal/: README.md  hilbert.cpp
Chapter1/Sierpinsky/: CMakeLists.txt  SierpinskyWirth.cpp  main.cpp
Chapter3/NameSearch/: CMakeLists.txt  main.cpp
Chapter3/searcher/: CMakelists.txt  searcher.cpp  searcher.h
Chapter4/AVLTreeSearch/: CMakeLists.txt  avlTree.cpp  avlTree.h  main.cpp  nodeTree.h  student.h
Chapter4/HashTable/: CMakeLists.txt  hashTable.cpp  hashTable.h  main.cpp  node.cpp  node.h
Chapter4/Knapsack/: main.cpp
Chapter5/CoinChange/: CMakeLists.txt  main.cpp
Chapter5/GraphSearch/: CMakeLists.txt  graph.conf  graphSearch.cpp  graphSearch.h  main.cpp
Chapter5/Interval/: CMakeLists.txt  main.cpp
Chapter5/InvertedIndexSearch/: CMakeLists.txt  doc2.txt  doc3.txt  main.cpp
Chapter5/Knapsack/: CMakeLists.txt
Chapter5/VectorSearch/: CMakeLists.txt  doc1.txt  main.cpp
Chapter6/DependencyInjection/: CMakeLists.txt  main.cpp
Chapter6/InheritanceDemo/: Base.cpp  Base.h  CMakeLists.txt  Derived.cpp  Derived.h  main.cpp
Chapter6/adapter/: CMakeLists.txt  main.cpp
Chapter6/builder/: CMakeLists.txt  main.cpp
Chapter6/cSignatures/: CMakeLists.txt  Readme.md  main.c
Chapter6/carFactory/: CMakeLists.txt  main.cpp
Chapter6/classMemory/: CMakeLists.txt  main.cpp
Chapter6/command/: CMakeLists.txt  Command.h  CommandManager.h  DeleteTextCommand.h  Editor.h  InsertTextCommand.h  main.cpp
Chapter6/decorator/: CMakeLists.txt  main.cpp
Chapter6/languageSupport/: CMakeLists.txt  JsonLanguageProvider.h  LanguageProvider.h  main.cpp
Chapter6/languageSupport/lang/: de.json  en.json  es.json
Chapter6/proxy/: CMakeLists.txt  CalculatorProxy.cpp  CalculatorProxy.h  ICalculator.h  RemoteMathJSCalculator.cpp  RemoteMathJSCalculator.h  main.cpp
Chapter6/signalSlot/: CMakeLists.txt  button.h  controller.h  logger.h  main.cpp  signal.h
Chapter6/singleton/: CMakeLists.txt  main.cpp
Chapter6/stateMachine/: CMakeLists.txt  PausedState.cpp  PausedState.h  Player.h  PlayingState.cpp  PlayingState.h  State.h  StoppedState.cpp  StoppedState.h  main.cpp
common/: graphicsConsole.cpp  graphicsConsole.h
